# phantomwatch

./: .clangd  .gitignore  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  build.rs
bpf/: exec_tracker.bpf.c
bpf/include/: common.h
src/: correlator.rs  main.rs
tests/fixtures/: memfd_exec_dummy  memfd_exec_dummy.c  proc_mem_dummy  proc_mem_dummy.c  ptrace_dummmy  ptrace_dummy.c  vm_writev_dummy  vm_writev_dummy.c
