[package]
name = "phantomwatch"
version = "0.1.0"
edition = "2024"

[dependencies]
libbpf-rs = "0.25"
plain = "0.2"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["hostname" ]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
libbpf-cargo = "0.25"
